<resources>
    <string name="app_name">Weight Management</string>
    <string name="login">Sign in </string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forgot your ID or Password ?</string>
    <string name="not_a_menber">Not a member ? </string>
    <string name="create_an_account">Create an Account</string>
    <string name="register">Register</string>
    <string name="Name1">Name </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmationMessage"><![CDATA[By creating an account you are agreeing to the Terms & Conditions which govern your use of this service.]]></string>
    <string name="already_have_account">Already have an account ?</string>


    //for BMI

    <string name="action_settings">Settings</string>
    <string name="title_activity_bmi">BMI Calculator</string>
    <string name="title_activity_converter">Unit Converter</string>
    <string-array name="conversion_type">
        <item>Area</item>
        <item>Digital Storage</item>
        <item>Energy</item>
        <item>Frequency</item>
        <item>Mass</item>
        <item>Length</item>
        <item>Plane Angle</item>
        <item>Pressure</item>
        <item>Speed</item>
        <item>Temperature</item>
        <item>Time</item>
        <item>Volume</item>
    </string-array>

    <string-array name="area">
        <item>Square kilometer</item>
        <item>Square metre</item>
        <item>Square yard</item>
        <item>Square foot</item>
        <item>Square inch</item>
        <item>Square mile</item>
        <item>Hectare</item>
        <item>Acre</item>
    </string-array>

    <string-array name="digital_storage">
        <item>Bit</item>
        <item>Byte</item>
        <item>Kilo Byte</item>
        <item>Mega Byte</item>
        <item>Giga Byte</item>
        <item>Tera Byte</item>
        <item>Peta Byte</item>
    </string-array>


    <string-array name="energy">
        <item>Joule</item>
        <item>Kilojoule</item>
        <item>Kilo calorie</item>
        <item>Kilowatt hour</item>
        <item>Foot-pound</item>
    </string-array>

    <string-array name="frequency">
        <item>Hertz</item>
        <item>Kilohertz</item>
        <item>Megahertz</item>
        <item>Gigahertz</item>
    </string-array>

    <string-array name="length">
        <item>Kilometre</item>
        <item>Metre</item>
        <item>Centimetre</item>
        <item>Millimeter</item>
        <item>Micrometer</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Foot</item>
        <item>Inch</item>
        <item>Nautical Mile</item>
    </string-array>

    <string-array name="mass">
        <item>Tonne</item>
        <item>Kilogram</item>
        <item>Gram</item>
        <item>Milligram</item>
        <item>Microgram</item>
        <item>Stone</item>
        <item>Pound</item>
        <item>Ounce</item>
    </string-array>

    <string-array name="phase_angle">
        <item>Degree</item>
        <item>Gradian</item>
        <item>Radian</item>
        <item>Milliradian</item>
    </string-array>

    <string-array name="pressure">
        <item>Atmosphere</item>
        <item>Bar</item>
        <item>Pascal</item>
        <item>Torr</item>
    </string-array>

    <string-array name="speed">
        <item>Miles per hour</item>
        <item>Foot per second</item>
        <item>Metre per second</item>
        <item>Kilometre per hour</item>
        <item>Knot</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Kelvin</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="time">
        <item>Millisecond</item>
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>Decade</item>
        <item>Century</item>
    </string-array>

    <string-array name="volume">
        <item>Litre</item>
        <item>Milliletre</item>
        <item>Imperial gallon</item>
        <item>Imperial quart</item>
        <item>Imperial cup</item>
        <item>Cubic foot</item>
        <item>Cubic Inch</item>
        <item>Cubic metre</item>
    </string-array>
    <string name="edit_text_from">Enter value</string>

    //for sleep
    <string name="desc_settings">Catch full sleep cycles for a great night\'s rest!</string>
    <string name="pick_bedTime">Set Bed Time</string>
    <string name="pick_wakeTime">Set Wake Time</string>
    <string name="no_Time">No time set!</string>
    <string name="calc_Time">You should get up at:</string>
    <string name="no_calcTime">--</string>
    <string name="button_send">Set Alarm</string>

    //for water
    <!-- settings-->


    <!-- fragments preferences title & summary  water calculation-->
    <string name="pref_training_title">Training</string>
    <string name="pref_weight_title">Weight (kg)</string>
    <string name="pref_water_need_title">Daily Need</string>

    <string name="pref_notif_sound_title">Sounds</string>


    <string name="wake_up_review">2 glasses of water after waking up - helps activate internal organs</string>
    <string name="sleep_review">1 glass of water before going to bed - avoids stroke or heart attack</string>
    <string name="shower_review">1 glass of water before taking a shower - helps lower blood pressure </string>
    <string name="meal_review">1 glass of water 30 before a meal - helps digestion</string>
    <string name="lose_weight">Water speeds up the metabolism. To lose extra weight - drink more water</string>
    <string name="lack_water">The brain and blood vessels function poorly with a lack of water. To prevent this from happening, maintain a normal water balance</string>

    <string name="advice1">Some psychologists prescribe daily exercise for depressed patients and see mood improvements equal to those of prescription antidepressant drug therapy.</string>
    <string name="advice2">Exercise helps you to lose fat but not muscle, which determines how fast or slow your body burns calories.</string>
    <string name="advice3">Exercise burns calories is by increasing your metabolic rate. </string>
    <string name="advice4">Exercise pulls stored calories in the forms of glucose and fat out of tissues so that blood glucose levels stay even and you don’t feel hungry.</string>
    <string name="advice5">Stretch all your muscles at least twice a week after you exercise. That helps keep you flexible and prevent injury.</string>
    <string name="advice6">Work at a slow, comfortable pace so you start to get fit without straining your body.</string>
    <string name="choose_exercise">Choose Exercise</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="todo">TODO</string>
    <string name="burn_calories">Burn Calories</string>
    <string name="cals">cals</string>
    <string name="select_type">Select Type :</string>
    <string name="enter_weight">Enter weight :</string>
    <string name="kg">kg</string>
    <string name="enter_time">Enter time :</string>
    <string name="min">min</string>
    <string name="new_text">New Text</string>
    <string name="share_advice">Share advice</string>
    <string name="exercise">Exercise</string>
    <string name="water">Water</string>
    <string name="sleep">Sleep</string>
    <string name="other_size">other size</string>
    <string name="cancel">cancel</string>
    <string name="congratulation">Congratulation!</string>
    <string name="the_norm_is_achieved">the norm is achieved</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="age">Age</string>
    <string name="yrs">Yrs</string>
    <string name="weight">Weight</string>
    <string name="kilogram">Kg</string>
    <string name="height">Height</string>
    <string name="cm">Cm</string>
    <string name="result">Result</string>
    <string name="reset">Reset</string>
    <string name="_0_0">0.0</string>
    <string name="underweight">UnderWeight</string>
    <string name="hyphen">-</string>
    <string name="normal">Normal</string>
    <string name="overweight">OverWeight</string>
    <string name="obese">Obese</string>
    <string name="morbidly_obese">Morbidly Obese</string>
    <string name="from">From</string>
    <string name="clear">Clear</string>
    <string name="to">To</string>
    <string name="conversion_type">Conversion Type</string>
    <string name="_1_6">1/6</string>
    <string name="today_you_drank">Today you drank</string>
    <string name="add_a_drink">add a drink</string>
    <string name="set">set</string>
    <string name="_240_ml">240 ml</string>
    <string name="_1500_ml">1500 ml</string>
    <string name="drank">Drank</string>
    <string name="food">Food</string>
    <string name="add_food">Add Food</string>

</resources>
