<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Exercise.ExerciseDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/burn_calories"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:background="@drawable/border_shadow"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/tvExerciseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="7dp">
                <TextView
                    android:id="@+id/tvCals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="35sp"
                    android:text=""/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/cals"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/select_type"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_marginTop="7dp"
                android:layout_width="240dp"
                android:layout_height="45dp"
                android:isScrollContainer="true"
                android:spinnerMode="dropdown"
                android:dropDownSelector="@drawable/ic_arrow_drop_down_green_24dp"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/enter_weight"/>

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="150dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/enter_time"/>

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="150dp"
                    android:layout_marginStart="13dp"
                    android:inputType="number"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>
