<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:preference="http://schemas.android.com/apk/res-auto"
    xmlns:developers.weightmanagement.Water.NumberPickerPreference.preference="http://schemas.android.com/tools">

    <PreferenceCategory android:title="Daily Need Measurement " />

    <developers.weightmanagement.Water.Basic.NumberPickerPreference
        android:key="key_weight_number"
        android:title="@string/pref_weight_title"
        android:icon="@drawable/weight_icon"
        developers.weightmanagement.Water.NumberPickerPreference.preference:maxValue="@integer/weight_max_vlaue"
        developers.weightmanagement.Water.NumberPickerPreference.preference:minValue="@integer/weight_min_value"
        android:summary="Add your weight!"
        developers.weightmanagement.Water.NumberPickerPreference.preference:wrapSelectorWheel="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/training_icon"
        android:key="key_training"
        android:title="@string/pref_training_title" />

    <developers.weightmanagement.Water.Basic.NumberPickerPreference
        android:defaultValue="2500"
        android:key="key_water_recommendation"
        android:title="@string/pref_water_need_title"
        android:icon="@drawable/icon_water_drop"
        developers.weightmanagement.Water.NumberPickerPreference.preference:maxValue="@integer/water_recom_number_max_value"
        developers.weightmanagement.Water.NumberPickerPreference.preference:minValue="@integer/water_recom_number_min_value"
        android:summary="2500 ml"
        developers.weightmanagement.Water.NumberPickerPreference.preference:wrapSelectorWheel="false" />
    <Preference android:layout="@layout/divider">

    </Preference>
    <PreferenceCategory
        android:title="Container Size ">

        <ListPreference
            android:key="key_glass"
            android:title="Glass size"
            android:defaultValue="250"
            android:icon="@drawable/water_glass"
            android:entries="@array/glass_size_names_array"
            android:entryValues="@array/glass_size_values_array" />

        <ListPreference
            android:key="key_bottle"
            android:title="Bottle size"
            android:defaultValue="1500"
            android:entries="@array/bottle_size_names_array"
            android:entryValues="@array/bottle_size_values_array"
            android:icon="@drawable/water_bottle" />

    </PreferenceCategory>
    <Preference android:layout="@layout/divider">

    </Preference>
    <PreferenceCategory
        android:title="Sounds">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_sound"
            android:key="key_notif_sound"
            android:title="@string/pref_notif_sound_title" />
    </PreferenceCategory>


</PreferenceScreen>
