<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Startup.RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:background="@drawable/border_shadow"
            android:scrollbars="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_gravity="center">

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="italic" />


            <View
                android:layout_width="wrap_content"
                android:layout_height="12dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name1"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="7dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email1"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="7dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/black">

                <AutoCompleteTextView
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="7dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/black">

                <AutoCompleteTextView
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="7dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmationMessage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:text="@string/register"
                android:textColor="@color/white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/RedirectToLogin"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_account"
                        android:textColor="@android:color/holo_orange_dark"/>
                    <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@android:color/holo_orange_dark" />
                </LinearLayout>

            </LinearLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />



        </LinearLayout>


    </ScrollView>

</LinearLayout>
